Clean up build system a little, open us up to using C++ in other files, but we stay C.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,11 +1,13 @@
 
 CC=gcc
+CXX=g++
+CXXFLAGS=-std=gnu++98 -pedantic -Wall -g -O0 -ftrapv -fstrict-aliasing -Wstrict-aliasing
 CFLAGS=-std=gnu99 -pedantic -Wall -g -O0 -ftrapv -fstrict-aliasing -Wstrict-aliasing
 LDFLAGS=-lcrypto substrings/libsubstrings.a
 
 all: config action main package db files
 	$(MAKE) -C substrings static
-	$(CC) $(CFLAGS) config.o action.o main.o package.o db.o files.o $(LDFLAGS) -o ../packrat
+	$(CXX) config.o action.o main.o package.o db.o files.o $(LDFLAGS) -o ../packrat
 config:
 	$(CC) -c $(CFLAGS) config.c 
 main:
@@ -21,3 +23,4 @@ files:
 
 clean:
 	rm -f *.o *.gch packrat
+	$(MAKE) -C substrings clean
