Move sqlite to a shared lib since we already need openssl

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,15 +3,11 @@ CC=gcc
 CXX=g++
 CXXFLAGS=-std=gnu++98 -pedantic -Wall -g3 -O0 -ftrapv -fstrict-aliasing -Wstrict-aliasing -Wno-long-long -fstack-protector
 CFLAGS=-std=gnu99 -pedantic -Wall -g -O3 -ftrapv -fstrict-aliasing -Wstrict-aliasing -fstack-protector
-LDFLAGS=-lcrypto substrings/libsubstrings.a
+LDFLAGS=-lcrypto substrings/libsubstrings.a -lsqlite3
 
-all: sqlite config action main package db files pwsr
+all: config action main package db files pwsr
 	$(MAKE) -C substrings static
-	$(CXX) config.o action.o main.o package.o db.o files.o passwd_w_sysroot.o sqlite3/sqlite3.o $(LDFLAGS) -o ../packrat
-	
-fast: config action main package db files pwsr
-	$(MAKE) -C substrings static
-	$(CXX) config.o action.o main.o package.o db.o files.o passwd_w_sysroot.o sqlite3/sqlite3.o $(LDFLAGS) -o ../packrat
+	$(CXX) config.o action.o main.o package.o db.o files.o passwd_w_sysroot.o $(LDFLAGS) -o ../packrat
 config:
 	$(CXX) -c $(CXXFLAGS) config.cpp
 main:
@@ -26,10 +22,6 @@ files:
 	$(CXX) -c $(CXXFLAGS) files.cpp 
 pwsr:
 	$(CXX) -c $(CXXFLAGS) passwd_w_sysroot.cpp
-sqlite:
-	@echo "Compiling SQLite, this can take a little bit..."
-	$(CC) -std=gnu99 -pedantic -Wall -O3 sqlite3/sqlite3.c -c -o sqlite3/sqlite3.o -fno-strict-aliasing -DSQLITE_THREADSAFE=0 -DSQLITE_OMIT_LOAD_EXTENSION -fstack-protector
-
 clean:
-	rm -f *.o *.gch packrat sqlite3/*.o sqlite3/*.gch
+	rm -f *.o *.gch packrat
 	$(MAKE) -C substrings clean
